# -op-labs

./: .gitignore  CMakeLists.txt  README.md
lw1/: ab  ab.cpp  abc  abc.cpp  hello  hello.cpp  hello_err.cpp  linear_equation  linear_equation.cpp  square_equation  square_equation.cpp
sfml.1/: CMakeLists.txt
sfml.1/00/: 00
sfml.1/01/: CMakeLists.txt  main.cpp
sfml.1/02/: CMakeLists.txt  main.cpp
sfml.1/03/: CMakeLists.txt  main.cpp
sfml.1/sfml.1.1/: CMakeLists.txt  main.cpp
sfml.1/sfml.1.2/: CMakeLists.txt  main.cpp
sfml.1/sfml.1.3/: CMakeLists.txt  main.cpp
sfml.2/: CMakeLists.txt
sfml.2/00/: CMakeLists.txt  main.cpp
sfml.2/01/: CMakeLists.txt  main.cpp
sfml.2/02/: main.cpp
sfml.2/03/: main.cpp
sfml.2/sfml2.1/: CMakeLists.txt
sfml.2/sfml2.2/: CMakeLists.txt  main.cpp  sfml2.2
sfml.3/: CMakeLists.txt
sfml.3/00/: 00  CMakeLists.txt
sfml.3/01/: main.cpp
sfml.3/02/: CMakeLists.txt  main.cpp
sfml.3/03/: CMakeLists.txt  main.cpp
sfml.3/04/: CMakeLists.txt  main.cpp
sfml.3/sfml3.1/: CMakeLists.txt  main.cpp
sfml.3/sfml3.2/: CMakeLists.txt  main.cpp
sfml.3/sfml3.3/: CMakeLists.txt  main  main.cpp
workshop 1/workshop 1.1/: CMakeLists.txt  main.cpp  workshop1.1
workshop 1/workshop 1.2/: CMakeLists.txt  main.cpp  workshop1.2
workshop 1/workshop1.3/: CMakeLists.txt  main.cpp  workshop1.3
workshop 1/workshop1.4/: CMakeLists.txt  main.cpp  workshop1.4
workshop_2/workshop2.1/: CMakeLists.txt  main.cpp
workshop_2/workshop2.2/: CMakeLists.txt  main.cpp
workshop_2/workshop2.3/: CMakeLists.txt  main.cpp
